# win32_dev

./: .gitignore  CMakeLists.txt  Makefile  README.md
.devcontainer/: Dockerfile  devcontainer.json
src/: main.c
